--- a/_bibliography/accr.bib
+++ b/_bibliography/accr.bib
@@ -1,3 +1,19 @@
+@article{RN99,
+	author = {Karras, P. and Bordeu, I. and Pozniak, J. and Nowosad, A. and Pazzi, C. and Van Raemdonck, N. and Landeloos, E. and Van Herck, Y. and Pedri, D. and Bervoets, G. and Makhzami, S. and Khoo, J. H. and Pavie, B. and Lamote, J. and Marin-Bejar, O. and Dewaele, M. and Liang, H. and Zhang, X. and Hua, Y. and Wouters, J. and Browaeys, R. and Bergers, G. and Saeys, Y. and Bosisio, F. and van den Oord, J. and Lambrechts, D. and Rustgi, A. K. and Bechter, O. and Blanpain, C. and Simons, B. D. and Rambow, F. and Marine, J. C.},
+	title = {A cellular hierarchy in melanoma uncouples growth and metastasis},
+	journal = {Nature},
+	volume = {610},
+	number = {7930},
+	pages = {190-198},
+	ISSN = {1476-4687 (Electronic)
+	0028-0836 (Linking)},
+	doi = {10.1038/s41586-022-05242-7},
+	url = {https://www.ncbi.nlm.nih.gov/pubmed/36131018},
+	year = {2022},
+	type = {Journal Article}
+}
+
+
 @article {Pozniak2022.08.11.502598,
 	author = {Pozniak, Joanna and Pedri, Dennis and Landeloos, Ewout and Herck, Yannick Van and Antoranz, Asier and Karras, Panagiotis and Nowosad, Ada and Makhzami, Samira and Bervoets, Greet and Dewaele, Michael and Vanwynsberghe, Lukas and Cinque, Sonia and Kint, Sam and Vandereyken, Katy and Voet, Thierry and Vernaillen, Frank and Annaert, Wim and Lambrechts, Diether and Boecxstaens, Veerle and van den Oord, Joost and Bosisio, Francesca and Leucci, Eleonora and Rambow, Florian and Bechter, Oliver and Marine, Jean-Christophe},
 	title = {A TCF4/BRD4-dependent regulatory network confers cross-resistance to targeted and immune checkpoint therapy in melanoma},
