--- a/_bibliography/mcmi.bib
+++ b/_bibliography/mcmi.bib
@@ -8,6 +8,16 @@
   keywords = {Artificial Intelligence (cs.AI),Computation and Language (cs.CL),FOS: Computer and information sciences,Machine Learning (cs.LG)}
 }
 
+@article{Lu2022_tsnre_channel-contribution-sleep-scoring,
+  author  = {Lu, Changqing and Pathak, Shreyasi and Englebienne, Gwenn and Seifert, Christin},
+  journal = {IEEE Transactions on Neural Systems and Rehabilitation Engineering},
+  title   = {Channel Contribution In Deep Learning Based Automatic Sleep Scoring – How Many Channels Do We Need?},
+  year    = {2022},
+  pages   = {1-1},
+  doi     = {10.1109/TNSRE.2022.3227040},
+}
+
+
 @article{imangaliyevDiagnosisInflammatoryBowel2022,
   title = {Diagnosis of {{Inflammatory Bowel Disease}} and {{Colorectal Cancer}} through {{Multi-View Stacked Generalization Applied}} on {{Gut Microbiome Data}}},
   author = {Imangaliyev, Sultan and Schl{\"o}tterer, J{\"o}rg and Meyer, Folker and Seifert, Christin},
