--- a/_bibliography/kei.bib
+++ b/_bibliography/kei.bib
@@ -1,47 +1,137 @@
-
-@inproceedings{DBLP:conf/cogmi/SchmidtSBNASM21,
-  title = {Towards a Trustworthy, Secure and Reliable Enclave for Machine Learning in a Hospital Setting: {{The Essen Medical Computing Platform}} ({{EMCP}})},
-  booktitle = {Third {{IEEE}} International Conference on Cognitive Machine Intelligence, {{CogMI}} 2021, Atlanta, {{GA}}, {{USA}}, December 13-15, 2021},
-  author = {Schmidt, Hendrik F. R. and Schl{\"o}tterer, J{\"o}rg and Bargull, Marcel and Nasca, Enrico and Aydelott, Ryan and Seifert, Christin and Meyer, Folker},
-  year = {2021},
-  pages = {116--123},
-  publisher = {{IEEE}},
-  doi = {10.1109/CogMI52975.2021.00023},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/cogmi/SchmidtSBNASM21.bib},
-  timestamp = {Wed, 20 Apr 2022 16:01:05 +0200}
+@article{imangaliyevDiagnosisInflammatoryBowel2022,
+  title = {Diagnosis of {{Inflammatory Bowel Disease}} and {{Colorectal Cancer}} through {{Multi-View Stacked Generalization Applied}} on {{Gut Microbiome Data}}},
+  author = {Imangaliyev, Sultan and Schl{\"o}tterer, J{\"o}rg and Meyer, Folker and Seifert, Christin},
+  year = {2022},
+  month = oct,
+  journal = {Diagnostics},
+  volume = {12},
+  number = {10},
+  pages = {2514},
+  issn = {2075-4418},
+  doi = {10.3390/diagnostics12102514},
+  abstract = {Most of the microbiome studies suggest that using ensemble models such as Random Forest results in best predictive power. In this study, we empirically evaluate a more powerful ensemble learning algorithm, multi-view stacked generalization, on pediatric inflammatory bowel disease and adult colorectal cancer patients' cohorts. We aim to check whether stacking would lead to better results compared to using a single best machine learning algorithm. Stacking achieves the best test set Average Precision (AP) on inflammatory bowel disease dataset reaching AP = 0.69, outperforming both the best base classifier (AP = 0.61) and the baseline meta learner built on top of base classifiers (AP = 0.63). On colorectal cancer dataset, the stacked classifier also outperforms (AP = 0.81) both the best base classifier (AP = 0.79) and the baseline meta learner (AP = 0.75). Stacking achieves best predictive performance on test set outperforming the best classifiers on both patient cohorts. Application of the stacking solves the issue of choosing the most appropriate machine learning algorithm by automating the model selection procedure. Clinical application of such a model is not limited to diagnosis task only, but it also can be extended to biomarker selection thanks to feature selection procedure.},
+  langid = {english}
 }
 
-@inproceedings{DBLP:conf/ecir/SchliskiSG20,
+@inproceedings{Julka2022,
+  title = {Conditional Generative Adversarial Networks for Speed Control in Trajectory Simulation},
+  booktitle = {Machine Learning, Optimization, and Data Science},
+  author = {Julka, Sahib and Sowrirajan, Vishal and Schl{\"o}tterer, J{\"o}rg and Granitzer, Michael},
+  editor = {Nicosia, Giuseppe and Ojha, Varun and La Malfa, Emanuele and La Malfa, Gabriele and Jansen, Giorgio and Pardalos, Panos M. and Giuffrida, Giovanni and Umeton, Renato},
+  year = {2021},
+  pages = {436--450},
+  publisher = {{Springer International Publishing}},
+  address = {{Cham}},
+  isbn = {978-3-030-95470-3}
+}
+
+@inproceedings{Liu2021,
+  title = {Rewriting Fictional Texts Using Pivot Paraphrase Generation and Character Modification},
+  booktitle = {Text, Speech, and Dialogue},
+  author = {Liu, Dou and Zhu, Tingting and Schl{\"o}tterer, J{\"o}rg and Seifert, Christin and Wang, Shenghui},
+  editor = {Ek{\v s}tein, Kamil and P{\'a}rtl, Franti{\v s}ek and Konop{\'i}k, Miloslav},
+  year = {2021},
+  pages = {73--85},
+  publisher = {{Springer International Publishing}},
+  address = {{Cham}},
+  isbn = {978-3-030-83527-9}
+}
+
+@misc{nauta2022,
+  title = {From Anecdotal Evidence to Quantitative Evaluation Methods: {{A}} Systematic Review on Evaluating Explainable {{AI}}},
+  author = {Nauta, Meike and Trienes, Jan and Pathak, Shreyasi and Nguyen, Elisa and Peters, Michelle and Schmitt, Yasmin and Schl{\"o}tterer, J{\"o}rg and {van Keulen}, Maurice and Seifert, Christin},
+  year = {2022},
+  publisher = {{arXiv}},
+  doi = {10.48550/ARXIV.2201.08164},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@misc{Nguyen2022,
+  title = {Explaining Machine Learning Models in Natural Conversations: {{Towards}} a Conversational {{XAI}} Agent},
+  author = {Nguyen, Van Bach and Schl{\"o}tterer, J{\"o}rg and Seifert, Christin},
+  year = {2022},
+  publisher = {{arXiv}},
+  doi = {10.48550/ARXIV.2209.02552},
+  copyright = {Creative Commons Attribution Non Commercial No Derivatives 4.0 International}
+}
+
+@inproceedings{Nguyen2022_iclr-blog_pplmrevisiteds-mammoth,
+  title = {{{PPLM}} Revisited: {{Steering}} and Beaming a Lumbering Mammoth to Control Text Generation},
+  booktitle = {{{ICLR}} Blog Track},
+  author = {Nguyen, Van Bach and Trienes, Jan and Nauta, Meike and Pathak, Shreyasi and Youssef, Paul and Imangaliyev, Sultan and Schl{\"o}tterer, J{\"o}rg and Seifert, Christin},
+  year = {2022},
+  url = {https://iclr-blog-track.github.io/2022/03/25/PPLM/},
+  keywords = {peer-other}
+}
+
+@inproceedings{schliski2020ecir,
   title = {Influence of Random Walk Parametrization on Graph Embeddings},
-  booktitle = {Advances in Information Retrieval - 42nd European Conference on {{IR}} Research, {{ECIR}} 2020, Lisbon, Portugal, April 14-17, 2020, Proceedings, Part {{II}}},
+  booktitle = {Advances in Information Retrieval},
   author = {Schliski, Fabian and Schl{\"o}tterer, J{\"o}rg and Granitzer, Michael},
   editor = {Jose, Joemon M. and Yilmaz, Emine and Magalh{\~a}es, Jo{\~a}o and Castells, Pablo and Ferro, Nicola and Silva, M{\'a}rio J. and Martins, Fl{\'a}vio},
   year = {2020},
-  series = {Lecture Notes in Computer Science},
-  volume = {12036},
+  series = {{{ECIR}} 2020},
   pages = {58--65},
-  publisher = {{Springer}},
-  doi = {10.1007/978-3-030-45442-5\_8},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/ecir/SchliskiSG20.bib},
-  timestamp = {Mon, 15 Jun 2020 01:00:00 +0200}
+  publisher = {{Springer International Publishing}},
+  address = {{Cham}},
+  abstract = {Network or graph embedding has gained increasing attention in the research community during the last years. In particular, many methods to create graph embeddings using random walk based approaches have been developed. node2vec [10] introduced means to control the random walk behavior, guiding the walks. We aim to reproduce parts of their work and introduce two additional modifications (jump probabilities and attention to hubs), in order to investigate how guiding and modifying the walks influences the learned embeddings. The reproduction includes the case study illustrating homophily and structural equivalence subject to the chosen strategy and a node classification task. We were not able to illustrate structural equivalence and further results show that modifications of the walks only slightly improve node classification, if at all.},
+  isbn = {978-3-030-45442-5}
 }
 
-@inproceedings{DBLP:conf/ecir/ZerhoudiGSS22,
-  title = {Evaluating Simulated User Interaction and Search Behaviour},
-  booktitle = {Advances in Information Retrieval - 44th European Conference on {{IR}} Research, {{ECIR}} 2022, Stavanger, Norway, April 10-14, 2022, Proceedings, Part {{II}}},
-  author = {Zerhoudi, Saber and Granitzer, Michael and Seifert, Christin and Schloetterer, Joerg},
-  editor = {Hagen, Matthias and Verberne, Suzan and Macdonald, Craig and Seifert, Christin and Balog, Krisztian and N{\o}rv{\aa}g, Kjetil and Setty, Vinay},
+@article{schloetterer2020cola,
+  title = {{{QueryCrumbs}} Search Query History Visualization \textendash{} {{Usability}}, Transparency and Long-Term Usage},
+  author = {Schl{\"o}tterer, J{\"o}rg and Seifert, Christin and Satchell, Christopher and Granitzer, Michael},
+  year = {2020},
+  journal = {Journal of Computer Languages},
+  volume = {57},
+  pages = {100941},
+  issn = {2590-1184},
+  doi = {10.1016/j.cola.2020.100941},
+  abstract = {Models of human information seeking reveal that search, in particular ad-hoc retrieval, is non-linear and iterative. Despite these findings, today's search user interfaces do not support non-linear navigation, like for example backtracking in time. We propose QueryCrumbs, a compact and easy-to-understand visualization for navigating the search query history supporting iterative query refinement. We apply a multi-layered interface design to support novices and first-time users as well as intermediate and expert users. The visualization is evaluated with novice users in a formative user study, with experts in a think aloud test and its usage in a long-term study with software logging. The formative evaluation showed that the interactions can be easily performed, and the visual encodings were well understood without instructions. Results indicate that QueryCrumbs can support users when searching for information in an iterative manner. The evaluation with experts showed that expert users can gain valuable insights into the back-end search engine by identifying specific patterns in the visualization. In a long-term usage study, we observed an uptake of the visualization, indicating that users deem QueryCrumbs beneficial for their search interactions.},
+  keywords = {Information refinding,Information retrieval,Queryhistory visualization,Search experts,Search history}
+}
+
+@phdthesis{schlotterer2020supporting,
+  title = {Supporting the Discovery of Long-Tail Resources on the Web},
+  author = {Schl{\"o}tterer, J{\"o}rg},
+  year = {2020},
+  eprint = {urn:nbn:de:bvb:739-opus4-8539},
+  eprinttype = {urn},
+  school = {University of Passau},
+  keywords = {peer-other}
+}
+
+@inproceedings{Schmidt2021,
+  title = {Towards a Trustworthy, Secure and Reliable Enclave for Machine Learning in a Hospital Setting: {{The Essen Medical Computing Platform}} ({{EMCP}})},
+  booktitle = {2021 {{IEEE}} Third International Conference on Cognitive Machine Intelligence ({{CogMI}})},
+  author = {Schmidt, Hendrik F.R. and Schl{\"o}tterer, J{\"o}rg and Bargull, Marcel and Nasca, Enrico and Aydelott, Ryan and Seifert, Christin and Meyer, Folker},
+  year = {2021},
+  pages = {116--123},
+  doi = {10.1109/CogMI52975.2021.00023}
+}
+
+@inproceedings{Trienes2022_tsar_patient-friendly-clinical-notes,
+  title = {Patient-Friendly Clinical Notes: {{Towards}} a New Text Simplification Dataset},
+  booktitle = {Proc. {{EMNLP}} Workshop on Text Simplification, Accessibility, and Readability ({{TSAR}})},
+  author = {Trienes, Jan and Schl{\"o}tterer, J{\"o}rg and Schildhaus, Hans-Ulrich and Seifert, Christin},
+  year = {2022}
+}
+
+@inproceedings{Youssef2022_dmbih_model-personalizaton-patient-data,
+  title = {Model Personalization with Static and Dynamic Patients' Data},
+  booktitle = {Proc. {{ICDM}} Workshop on Data Mining in Biomedical Informatics and Healthcare ({{DMBIH}})},
+  author = {Youssef, Paul and Schl{\"o}tterer, J{\"o}rg and Imangaliyev, Sultan and Seifert, Christin},
+  year = {2022}
+}
+
+@inproceedings{zerhoudiEvaluatingSimulatedUser2022,
+  title = {Evaluating {{Simulated User Interaction}} and {{Search Behaviour}}},
+  booktitle = {Advances in {{Information Retrieval}}},
+  author = {Zerhoudi, Saber and Seifert, Christin and Schl{\"o}tterer, J{\"o}rg and Granitzer, Michael},
   year = {2022},
-  series = {Lecture Notes in Computer Science},
-  volume = {13186},
-  pages = {240--247},
-  publisher = {{Springer}},
-  doi = {10.1007/978-3-030-99739-7\_28},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/ecir/ZerhoudiGSS22.bib},
-  timestamp = {Wed, 27 Apr 2022 01:00:00 +0200}
+  publisher = {{Springer International Publishing}},
+  address = {{Cham}},
+  doi = {DOI: 10.1007/978-3-030-99739-7_28}
 }
 
 @inproceedings{zerhoudiQueryChangeContextual2021,
@@ -51,110 +141,14 @@
   year = {2021},
   series = {{{FIRE}} '21},
   publisher = {{Association for Computing Machinery}},
-  doi = {10.1145/3503162.3503165}
+  doi = {10.1145/3503162.3503165},
+  abstract = {Search engine users issue queries to formulate their information need and gain useful insights. However, it is challenging for search engines to understand different users' search type intents and re- turn appropriate results. Simulating user search behaviour allows information retrieval systems (IR) to parameterise the a-priori dis- tribution of search types using different back-end configurations and user interface variants to improve the retrieval functionality. In this paper, we propose a formal Markov approach in which we utilise the context discovery process to model user-type specific behaviour by capturing the user's query change in a search session. Contextual Markov models have been used in the past to improve the prediction of user intentions, we investigate here their effi- ciency in simulating user-type specific interactions. Additionally, we provide an empirical and classification-based evaluation that can be used in simulation assessment. Overall, we report that the proposed approach reliably simulates user-type specific behaviour on a real-world academic search engine log dataset.}
 }
 
-
-
-@inproceedings{DBLP:conf/tsd/LiuZSSW21,
-  title = {Rewriting Fictional Texts Using Pivot Paraphrase Generation and Character Modification},
-  booktitle = {Text, Speech, and Dialogue - 24th International Conference, {{TSD}} 2021, Olomouc, Czech Republic, September 6-9, 2021, Proceedings},
-  author = {Liu, Dou and Zhu, Tingting and Schl{\"o}tterer, J{\"o}rg and Seifert, Christin and Wang, Shenghui},
-  editor = {Ekstein, Kamil and P{\'a}rtl, Frantisek and Konop{\'i}k, Miloslav},
-  year = {2021},
-  series = {Lecture Notes in Computer Science},
-  volume = {12848},
-  pages = {73--85},
-  publisher = {{Springer}},
-  doi = {10.1007/978-3-030-83527-9\_6},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/tsd/LiuZSSW21.bib},
-  timestamp = {Mon, 20 Sep 2021 01:00:00 +0200}
-}
-
-@article{DBLP:journals/corr/abs-2002-05257,
-  title = {Shortest Path Distance Approximation Using Deep Learning Techniques},
-  author = {Rizi, Fatemeh Salehi and Schl{\"o}tterer, J{\"o}rg and Granitzer, Michael},
-  year = {2020},
-  journal = {CoRR},
-  volume = {abs/2002.05257},
-  eprint = {2002.05257},
-  eprinttype = {arxiv},
-  url = {https://arxiv.org/abs/2002.05257},
-  archiveprefix = {arXiv},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/corr/abs-2002-05257.bib},
-  timestamp = {Fri, 14 Feb 2020 00:00:00 +0100}
-}
-
-@article{DBLP:journals/corr/abs-2002-07252,
-  title = {Investigating Extensions to Random Walk Based Graph Embedding},
-  author = {Schl{\"o}tterer, J{\"o}rg and Wehking, Martin and Rizi, Fatemeh Salehi and Granitzer, Michael},
-  year = {2020},
-  journal = {CoRR},
-  volume = {abs/2002.07252},
-  eprint = {2002.07252},
-  eprinttype = {arxiv},
-  url = {https://arxiv.org/abs/2002.07252},
-  archiveprefix = {arXiv},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/corr/abs-2002-07252.bib},
-  timestamp = {Mon, 02 Mar 2020 00:00:00 +0100}
-}
-
-@inproceedings{julkacga21,
-  title = {Conditional Generative Adversarial Networks for Speed Control in Trajectory Simulation},
-  booktitle = {Machine Learning, Optimization, and Data Science - 7th International Conference, {{LOD}} 2021, Grasmere, {{UK}}, October 4-8, 2021, Revised Selected Papers, Part {{II}}},
-  author = {Julka, Sahib and Sowrirajan, Vishal and Schloetterer, Joerg and Granitzer, Michael},
-  editor = {Nicosia, Giuseppe and Ojha, Varun and Malfa, Emanuele La and Malfa, Gabriele La and Jansen, Giorgio and Pardalos, Panos M. and Giuffrida, Giovanni and Umeton, Renato},
-  year = {2021},
-  series = {Lecture Notes in Computer Science},
-  volume = {13164},
-  pages = {436--450},
-  publisher = {{Springer}},
-  doi = {10.1007/978-3-030-95470-3\_33},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/conf/mod/JulkaSSG21.bib},
-  timestamp = {Wed, 23 Feb 2022 00:00:00 +0100}
-}
-
-@article{DBLP:journals/corr/abs-2201-08164,
-  title = {From Anecdotal Evidence to Quantitative Evaluation Methods: {{A}} Systematic Review on Evaluating Explainable {{AI}}},
-  author = {Nauta, Meike and Trienes, Jan and Pathak, Shreyasi and Nguyen, Elisa and Peters, Michelle and Schmitt, Yasmin and Schl{\"o}tterer, J{\"o}rg and {van Keulen}, Maurice and Seifert, Christin},
+@inproceedings{zerhoudiSimulatingUserInteraction2022,
+  title = {Simulating {{User Interaction}} and {{Search Behaviour}} in {{Digital Libraries}}},
+  booktitle = {Proc. {{Italian Research Conference}} on {{Digital Libraries}}},
+  author = {Zerhoudi, Saber and Granitzer, Michael and Seifert, Christin and Schl{\"o}tterer, J{\"o}rg},
   year = {2022},
-  journal = {CoRR},
-  volume = {abs/2201.08164},
-  eprint = {2201.08164},
-  eprinttype = {arxiv},
-  url = {https://arxiv.org/abs/2201.08164},
-  archiveprefix = {arXiv},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/corr/abs-2201-08164.bib},
-  timestamp = {Tue, 01 Feb 2022 00:00:00 +0100}
+  series = {{{IRCDL}}}
 }
-
-@article{DBLP:journals/vlc/SchlottererSSG20,
-  title = {{{QueryCrumbs}} Search Query History Visualization - {{Usability}}, Transparency and Long-Term Usage},
-  author = {Schl{\"o}tterer, J{\"o}rg and Seifert, Christin and Satchell, Christopher and Granitzer, Michael},
-  year = {2020},
-  volume = {57},
-  pages = {100941},
-  doi = {10.1016/j.cola.2020.100941},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/journals/vlc/SchlottererSSG20.bib},
-  timestamp = {Mon, 15 Jun 2020 01:00:00 +0200}
-}
-
-@phdthesis{DBLP:phd/dnb/Schlotterer20,
-  title = {Supporting the Discovery of Long-Tail Resources on the Web},
-  author = {Schl{\"o}tterer, J{\"o}rg},
-  year = {2020},
-  url = {https://opus4.kobv.de/opus4-uni-passau/frontdoor/index/index/docId/853},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl = {https://dblp.org/rec/phd/dnb/Schlotterer20.bib},
-  school = {University of Passau, Germany},
-  urn = {urn:nbn:de:bvb:739-opus4-8539},
-  timestamp = {Sat, 17 Jul 2021 01:00:00 +0200}
-}
-
-
