--- a/_bibliography/mcmi.bib
+++ b/_bibliography/mcmi.bib
@@ -236,7 +236,7 @@
 
 @inproceedings{Trienes2022_tsar_patient-friendly-clinical-notes,
   title = {Patient-Friendly Clinical Notes: {{Towards}} a New Text Simplification Dataset},
-  booktitle = {Proc. {{EMNLP}} Workshop Hop on Text Simplification, Accessibility, and Readability ({{TSAR}})},
+  booktitle = {Proc. {{EMNLP}} Workshop on Text Simplification, Accessibility, and Readability ({{TSAR}})},
   author = {Trienes, Jan and Schl{\"o}tterer, J{\"o}rg and Schildhaus, Hans-Ulrich and Seifert, Christin},
   year = {2022}
 }
