--- a/_bibliography/kei.bib
+++ b/_bibliography/kei.bib
@@ -127,7 +127,7 @@
 @inproceedings{zerhoudiEvaluatingSimulatedUser2022,
   title = {Evaluating {{Simulated User Interaction}} and {{Search Behaviour}}},
   booktitle = {Advances in {{Information Retrieval}}},
-  author = {Zerhoudi, Saber and Seifert, Christin and Schl{\"o}tterer, J{\"o}rg and Granitzer, Michael},
+  author = {Zerhoudi, Saber and Granitzer, Michael and Seifert, Christin and Schl{\"o}tterer, J{\"o}rg},
   year = {2022},
   publisher = {{Springer International Publishing}},
   address = {{Cham}},
