--- a/_bibliography/kei.bib
+++ b/_bibliography/kei.bib
@@ -22,19 +22,18 @@
   pages = {436--450},
   publisher = {{Springer International Publishing}},
   address = {{Cham}},
+  doi = {10.1007/978-3-030-95470-3_33},
   isbn = {978-3-030-95470-3}
 }
 
-@inproceedings{Liu2021,
-  title = {Rewriting Fictional Texts Using Pivot Paraphrase Generation and Character Modification},
-  booktitle = {Text, Speech, and Dialogue},
+@incollection{liuRewritingFictionalTexts2021,
+  title = {Rewriting {{Fictional Texts Using Pivot Paraphrase Generation}} and {{Character Modification}}},
+  booktitle = {Text, {{Speech}}, and {{Dialogue}}},
   author = {Liu, Dou and Zhu, Tingting and Schl{\"o}tterer, J{\"o}rg and Seifert, Christin and Wang, Shenghui},
-  editor = {Ek{\v s}tein, Kamil and P{\'a}rtl, Franti{\v s}ek and Konop{\'i}k, Miloslav},
   year = {2021},
   pages = {73--85},
   publisher = {{Springer International Publishing}},
-  address = {{Cham}},
-  isbn = {978-3-030-83527-9}
+  doi = {10.1007/978-3-030-83527-9_6}
 }
 
 @misc{nauta2022,
