--- a/_bibliography/mcmi.bib
+++ b/_bibliography/mcmi.bib
@@ -151,6 +151,7 @@
   title = {{{PPLM}} Revisited: {{Steering}} and Beaming a Lumbering Mammoth to Control Text Generation},
   booktitle = {{{ICLR}} Blog Track},
   author = {Nguyen, Van Bach and Trienes, Jan and Nauta, Meike and Pathak, Shreyasi and Youssef, Paul and Imangaliyev, Sultan and Schl{\"o}tterer, J{\"o}rg and Seifert, Christin},
+  url = {https://iclr-blog-track.github.io/2022/03/25/PPLM/},
   year = {2022}
 }
 
