--- a/_bibliography/ds.bib
+++ b/_bibliography/ds.bib
@@ -3912,3 +3912,29 @@ snakemake},
 	year = {2014},
 }
 
+@article{imangaliyev2022diagnosis,
+  title={Diagnosis of Inflammatory Bowel Disease and Colorectal Cancer through Multi-View Stacked Generalization Applied on Gut Microbiome Data},
+  author={Imangaliyev, Sultan and Schl{\"o}tterer, J{\"o}rg and Meyer, Folker and Seifert, Christin},
+  journal={Diagnostics},
+  volume={12},
+  number={10},
+  pages={2514},
+  year={2022},
+  publisher={MDPI}
+}
+
+@article{le2022identification,
+  title={Identification of herbal teas and their compounds eliciting antiviral activity against SARS-CoV-2 in vitro},
+  author={Le-Trilling, Vu Thuy Khanh and Mennerich, Denise and Schuler, Corinna and Sakson, Roman and Lill, Julia K. and Kasarla, Siva Swapna and Kopczynski, Dominik and Loroch, Stefan and Flores-Martinez, Yulia and Katschinski, Benjamin and others},
+  journal={BMC Biology},
+  volume={20},
+  number={264},
+  year={2022}
+}
+
+@article{mahgoub2022iris,
+  title={IRIS: Online Reconfiguration of Distributed NoSQL Databases for Dynamic Workloads},
+  author={Mahgoub, Ashraf and Wood, Paul C and Mitra, Subrata and Meyer, Folker and Chaterji, Somali and Bagchi, Saurabh},
+  year={2022}
+}
+
