fixed authors on Trilling et al

--- a/_bibliography/ds.bib
+++ b/_bibliography/ds.bib
@@ -3912,20 +3912,11 @@ snakemake},
 	year = {2014},
 }
 
-@article{imangaliyev2022diagnosis,
-  title={Diagnosis of Inflammatory Bowel Disease and Colorectal Cancer through Multi-View Stacked Generalization Applied on Gut Microbiome Data},
-  author={Imangaliyev, Sultan and Schl{\"o}tterer, J{\"o}rg and Meyer, Folker and Seifert, Christin},
-  journal={Diagnostics},
-  volume={12},
-  number={10},
-  pages={2514},
-  year={2022},
-  publisher={MDPI}
-}
 
+   
 @article{le2022identification,
   title={Identification of herbal teas and their compounds eliciting antiviral activity against SARS-CoV-2 in vitro},
-  author={Le-Trilling, Vu Thuy Khanh and Mennerich, Denise and Schuler, Corinna and Sakson, Roman and Lill, Julia K. and Kasarla, Siva Swapna and Kopczynski, Dominik and Loroch, Stefan and Flores-Martinez, Yulia and Katschinski, Benjamin and others},
+  author={Le-Trilling, Vu Thuy Khanh and Mennerich, Denise and Schuler, Corinna and Sakson, Roman and Lill, Julia K. and Kasarla, Siva Swapna and Kopczynski, Dominik and Loroch, Stefan and Flores-Martinez, Yulia and Katschinski, Benjamin and Wohlgemuth, Kerstin and  Gunzer, Matthias and  Meyer, Folker and  Phapale, Prasad, and  Dittmer, Ulf and  Sickmann, Albert and  Trilling, Mirko},
   journal={BMC Biology},
   volume={20},
   number={264},
