--- a/_bibliography/ds.bib
+++ b/_bibliography/ds.bib
@@ -3929,3 +3929,31 @@ snakemake},
   year={2022}
 }
 
+@article{imangaliyevDiagnosisInflammatoryBowel2022,
+  title = {Diagnosis of {{Inflammatory Bowel Disease}} and {{Colorectal Cancer}} through {{Multi-View Stacked Generalization Applied}} on {{Gut Microbiome Data}}},
+  author = {Imangaliyev, Sultan and Schl{\"o}tterer, J{\"o}rg and Meyer, Folker and Seifert, Christin},
+  year = {2022},
+  month = oct,
+  journal = {Diagnostics},
+  volume = {12},
+  number = {10},
+  pages = {2514},
+  issn = {2075-4418},
+  doi = {10.3390/diagnostics12102514},
+  abstract = {Most of the microbiome studies suggest that using ensemble models such as Random Forest results in best predictive power. In this study, we empirically evaluate a more powerful ensemble learning algorithm, multi-view stacked generalization, on pediatric inflammatory bowel disease and adult colorectal cancer patients' cohorts. We aim to check whether stacking would lead to better results compared to using a single best machine learning algorithm. Stacking achieves the best test set Average Precision (AP) on inflammatory bowel disease dataset reaching AP = 0.69, outperforming both the best base classifier (AP = 0.61) and the baseline meta learner built on top of base classifiers (AP = 0.63). On colorectal cancer dataset, the stacked classifier also outperforms (AP = 0.81) both the best base classifier (AP = 0.79) and the baseline meta learner (AP = 0.75). Stacking achieves best predictive performance on test set outperforming the best classifiers on both patient cohorts. Application of the stacking solves the issue of choosing the most appropriate machine learning algorithm by automating the model selection procedure. Clinical application of such a model is not limited to diagnosis task only, but it also can be extended to biomarker selection thanks to feature selection procedure.},
+  langid = {english}
+}
+
+@article{cernavaMetadataHarmonizationStandards2022,
+  title = {Metadata Harmonization\textendash{{Standards}} Are the Key for a Better Usage of Omics Data for Integrative Microbiome Analysis},
+  author = {Cernava, Tomislav and Rybakova, Daria and Buscot, Fran{\c c}ois and Clavel, Thomas and McHardy, Alice Carolyn and Meyer, Fernando and Meyer, Folker and Overmann, J{\"o}rg and Stecher, B{\"a}rbel and Sessitsch, Angela and Schloter, Michael and Berg, Gabriele and Arruda, Paulo and Bartzanas, Thomas and Kostic, Tanja and Brennan, Paula Iara and Biazotti, B{\'a}rbara Bort and {Champomier-Verges}, Marie-Christine and Charles, Trevor and Coakley, Mairead and Cotter, Paul and Cowan, Don and D'Hondt, Kathleen and Ferrocino, Ilario and Foterek, Kristina and {Herrero-Corral}, Gema and Huitema, Carly and Jansson, Janet and Liu, Shuang-Jiang and Malloy, Paula and Maguin, Emmanuelle and Markiewicz, Lidia and Mcclure, Ryan and Moser, Andreas and Roovers, Jolien and Ryan, Matthew and Sarand, Inga and Schelkle, Bettina and Meisner, Annelein and Schurr, Ulrich and Selvin, Joseph and Tsakalidou, Effie and Wagner, Martin and Wakelin, Steve and Wiczkowski, Wies{\l}aw and Winkler, Hanna and Xiao, Juanjuan and Bunthof, Christine J. and {de Souza}, Rafael Soares Correa and Sanz, Yolanda and Lange, Lene and Smidt, Hauke and {The MicrobiomeSupport Team}},
+  year = {2022},
+  month = jun,
+  journal = {Environmental Microbiome},
+  volume = {17},
+  number = {1},
+  pages = {33},
+  issn = {2524-6372},
+  doi = {10.1186/s40793-022-00425-1},
+  abstract = {Tremendous amounts of data generated from microbiome research studies during the last decades require not only standards for sampling and preparation of omics data but also clear concepts of how the metadata is prepared to ensure re-use for integrative and interdisciplinary microbiome analysis.}
+}
