--- a/_bibliography/mcmi.bib
+++ b/_bibliography/mcmi.bib
@@ -25,6 +25,20 @@
   url      = {https://www.sciencedirect.com/science/article/pii/S0720048X23001018},
 }
 
+@Article{Borys2023_ejr_xai-in-medical-beyond-saliency,
+  author   = {Katarzyna Borys and Yasmin Alyssa Schmitt and Meike Nauta and Christin Seifert and Nicole Krämer and Christoph M. Friedrich and Felix Nensa},
+  journal  = {European Journal of Radiology},
+  title    = {Explainable AI in medical imaging: An overview for clinical practitioners – Beyond saliency-based XAI approaches},
+  year     = {2023},
+  issn     = {0720-048X},
+  pages    = {110786},
+  volume   = {162},
+  abstract = {Driven by recent advances in Artificial Intelligence (AI) and Computer Vision (CV), the implementation of AI systems in the medical domain increased correspondingly. This is especially true for the domain of medical imaging, in which the incorporation of AI aids several imaging-based tasks such as classification, segmentation, and registration. Moreover, AI reshapes medical research and contributes to the development of personalized clinical care. Consequently, alongside its extended implementation arises the need for an extensive understanding of AI systems and their inner workings, potentials, and limitations which the field of eXplainable AI (XAI) aims at. Because medical imaging is mainly associated with visual tasks, most explainability approaches incorporate saliency-based XAI methods. In contrast to that, in this article we would like to investigate the full potential of XAI methods in the field of medical imaging by specifically focusing on XAI techniques not relying on saliency, and providing diversified examples. We dedicate our investigation to a broad audience, but particularly healthcare professionals. Moreover, this work aims at establishing a common ground for cross-disciplinary understanding and exchange across disciplines between Deep Learning (DL) builders and healthcare professionals, which is why we aimed for a non-technical overview. Presented XAI methods are divided by a method’s output representation into the following categories: Case-based explanations, textual explanations, and auxiliary explanations.},
+  doi      = {https://doi.org/10.1016/j.ejrad.2023.110786},
+  keywords = {Explainable AI, Medical imaging, Radiology, Black-Box, Explainability, Interpretability},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0720048X23001006},
+}
+
 
 @misc{Haller2022_preprints_short-answare-grading-survey,
   title = {Survey on Automated Short Answer Grading with Deep Learning: From Word Embeddings to Transformers},
