--- a/_bibliography/accr.bib
+++ b/_bibliography/accr.bib
@@ -1,3 +1,76 @@
+@article{RN61,
+   author = {Kruse, B. and Buzzai, A. C. and Shridhar, N. and Braun, A. D. and Gellert, S. and Knauth, K. and Pozniak, J. and Peters, J. and Dittmann, P. and Mengoni, M. and van der Sluis, T. C. and Hohn, S. and Antoranz, A. and Krone, A. and Fu, Y. and Yu, D. and Essand, M. and Geffers, R. and Mougiakakos, D. and Kahlfuss, S. and Kashkar, H. and Gaffal, E. and Bosisio, F. M. and Bechter, O. and Rambow, F. and Marine, J. C. and Kastenmuller, W. and Muller, A. J. and Tuting, T.},
+   title = {CD4(+) T cell-induced inflammatory cell death controls immune-evasive tumours},
+   journal = {Nature},
+   ISSN = {1476-4687 (Electronic)
+0028-0836 (Linking)},
+   DOI = {10.1038/s41586-023-06199-x},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/37316667},
+   year = {2023},
+   type = {Journal Article}
+}
+
+@article{RN62,
+   author = {Talebi, A. and de Laat, V. and Spotbeen, X. and Dehairs, J. and Rambow, F. and Rogiers, A. and Vanderhoydonc, F. and Rizotto, L. and Planque, M. and Doglioni, G. and Motamedi, S. and Nittner, D. and Roskams, T. and Agostinis, P. and Bechter, O. and Boecxstaens, V. and Garmyn, M. and O'Farrell, M. and Wagman, A. and Kemble, G. and Leucci, E. and Fendt, S. M. and Marine, J. C. and Swinnen, J. V.},
+   title = {Pharmacological induction of membrane lipid poly-unsaturation sensitizes melanoma to ROS inducers and overcomes acquired resistance to targeted therapy},
+   journal = {J Exp Clin Cancer Res},
+   volume = {42},
+   number = {1},
+   pages = {92},
+   ISSN = {1756-9966 (Electronic)
+0392-9078 (Print)
+0392-9078 (Linking)},
+   DOI = {10.1186/s13046-023-02664-7},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/37072838},
+   year = {2023},
+   type = {Journal Article}
+}
+
+@article{RN63,
+   author = {Martins Nascentes Melo, L. and Herrera-Rios, D. and Hinze, D. and Loffek, S. and Oezel, I. and Turiello, R. and Klein, J. and Leonardelli, S. and Westedt, I. V. and Al-Matary, Y. and Egea-Rodriguez, S. and Brenzel, A. and Bau, M. and Sucker, A. and Hadaschik, E. and Wirsdorfer, F. and Hanenberg, H. and Uhlenbrock, N. and Rauh, D. and Pozniak, J. and Rambow, F. and Marine, J. C. and Effern, M. and Glodde, N. and Schadendorf, D. and Jablonska, J. and Holzel, M. and Helfrich, I.},
+   title = {Glucocorticoid activation by HSD11B1 limits T cell-driven interferon signaling and response to PD-1 blockade in melanoma},
+   journal = {J Immunother Cancer},
+   volume = {11},
+   number = {4},
+   ISSN = {2051-1426 (Electronic)
+2051-1426 (Linking)},
+   DOI = {10.1136/jitc-2021-004150},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/37028818},
+   year = {2023},
+   type = {Journal Article}
+}
+
+@article{RN64,
+   author = {Shoji, K. F. and Bayet, E. and Leverrier-Penna, S. and Le Devedec, D. and Mallavialle, A. and Marionneau-Lambot, S. and Rambow, F. and Perret, R. and Joussaume, A. and Viel, R. and Fautrel, A. and Khammari, A. and Constantin, B. and Tartare-Deckert, S. and Penna, A.},
+   title = {The mechanosensitive TRPV2 calcium channel promotes human melanoma invasiveness and metastatic potential},
+   journal = {EMBO Rep},
+   volume = {24},
+   number = {4},
+   pages = {e55069},
+   ISSN = {1469-3178 (Electronic)
+1469-221X (Print)
+1469-221X (Linking)},
+   DOI = {10.15252/embr.202255069},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/36744297},
+   year = {2023},
+   type = {Journal Article}
+}
+
+@article{RN65,
+   author = {Hua, Y. and Vella, G. and Rambow, F. and Allen, E. and Martinez, A. A. and Duhamel, M. and Takeda, A. and Jalkanen, S. and Junius, S. and Smeets, A. and Nittner, D. and Dimmeler, S. and Hehlgans, T. and Liston, A. and Bosisio, F. M. and Floris, G. and Laoui, D. and Hollmen, M. and Lambrechts, D. and Merchiers, P. and Marine, J. C. and Schlenner, S. and Bergers, G.},
+   title = {Cancer immunotherapies transition endothelial cells into HEVs that generate TCF1(+) T lymphocyte niches through a feed-forward loop},
+   journal = {Cancer Cell},
+   volume = {41},
+   number = {1},
+   pages = {226},
+   ISSN = {1878-3686 (Electronic)
+1535-6108 (Linking)},
+   DOI = {10.1016/j.ccell.2022.12.006},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/36626867},
+   year = {2023},
+   type = {Journal Article}
+}
+
 @article{RN99,
 	author = {Karras, P. and Bordeu, I. and Pozniak, J. and Nowosad, A. and Pazzi, C. and Van Raemdonck, N. and Landeloos, E. and Van Herck, Y. and Pedri, D. and Bervoets, G. and Makhzami, S. and Khoo, J. H. and Pavie, B. and Lamote, J. and Marin-Bejar, O. and Dewaele, M. and Liang, H. and Zhang, X. and Hua, Y. and Wouters, J. and Browaeys, R. and Bergers, G. and Saeys, Y. and Bosisio, F. and van den Oord, J. and Lambrechts, D. and Rustgi, A. K. and Bechter, O. and Blanpain, C. and Simons, B. D. and Rambow, F. and Marine, J. C.},
 	title = {A cellular hierarchy in melanoma uncouples growth and metastasis},
@@ -13,7 +86,6 @@
 	type = {Journal Article}
 }
 
-
 @article {Pozniak2022.08.11.502598,
 	author = {Pozniak, Joanna and Pedri, Dennis and Landeloos, Ewout and Herck, Yannick Van and Antoranz, Asier and Karras, Panagiotis and Nowosad, Ada and Makhzami, Samira and Bervoets, Greet and Dewaele, Michael and Vanwynsberghe, Lukas and Cinque, Sonia and Kint, Sam and Vandereyken, Katy and Voet, Thierry and Vernaillen, Frank and Annaert, Wim and Lambrechts, Diether and Boecxstaens, Veerle and van den Oord, Joost and Bosisio, Francesca and Leucci, Eleonora and Rambow, Florian and Bechter, Oliver and Marine, Jean-Christophe},
 	title = {A TCF4/BRD4-dependent regulatory network confers cross-resistance to targeted and immune checkpoint therapy in melanoma},
@@ -26,9 +98,6 @@
 	eprint = {https://www.biorxiv.org/content/early/2022/08/13/2022.08.11.502598.full.pdf},
 	journal = {bioRxiv}
 }
-
-
-
 
 @article{RN48,
    author = {Verginadis, II and Avgousti, H. and Monslow, J. and Skoufos, G. and Chinga, F. and Kim, K. and Leli, N. M. and Karagounis, I. V. and Bell, B. I. and Velalopoulou, A. and Salinas, C. S. and Wu, V. S. and Li, Y. and Ye, J. and Scott, D. A. and Osterman, A. L. and Sengupta, A. and Weljie, A. and Huang, M. and Zhang, D. and Fan, Y. and Radaelli, E. and Tobias, J. W. and Rambow, F. and Karras, P. and Marine, J. C. and Xu, X. and Hatzigeorgiou, A. G. and Ryeom, S. and Diehl, J. A. and Fuchs, S. Y. and Pure, E. and Koumenis, C.},
