--- a/_bibliography/accr.bib
+++ b/_bibliography/accr.bib
@@ -71,6 +71,37 @@
    type = {Journal Article}
 }
 
+@article{RN66,
+   author = {Hua, Y. and Vella, G. and Rambow, F. and Allen, E. and Antoranz Martinez, A. and Duhamel, M. and Takeda, A. and Jalkanen, S. and Junius, S. and Smeets, A. and Nittner, D. and Dimmeler, S. and Hehlgans, T. and Liston, A. and Bosisio, F. M. and Floris, G. and Laoui, D. and Hollmen, M. and Lambrechts, D. and Merchiers, P. and Marine, J. C. and Schlenner, S. and Bergers, G.},
+   title = {Cancer immunotherapies transition endothelial cells into HEVs that generate TCF1(+) T lymphocyte niches through a feed-forward loop},
+   journal = {Cancer Cell},
+   volume = {40},
+   number = {12},
+   pages = {1600-1618 e10},
+   ISSN = {1878-3686 (Electronic)
+1535-6108 (Print)
+1535-6108 (Linking)},
+   DOI = {10.1016/j.ccell.2022.11.002},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/36423635},
+   year = {2022},
+   type = {Journal Article}
+}
+
+@article{RN67,
+   author = {Karras, P. and Bordeu, I. and Pozniak, J. and Nowosad, A. and Pazzi, C. and Van Raemdonck, N. and Landeloos, E. and Van Herck, Y. and Pedri, D. and Bervoets, G. and Makhzami, S. and Khoo, J. H. and Pavie, B. and Lamote, J. and Marin-Bejar, O. and Dewaele, M. and Liang, H. and Zhang, X. and Hua, Y. and Wouters, J. and Browaeys, R. and Bergers, G. and Saeys, Y. and Bosisio, F. and van den Oord, J. and Lambrechts, D. and Rustgi, A. K. and Bechter, O. and Blanpain, C. and Simons, B. D. and Rambow, F. and Marine, J. C.},
+   title = {Author Correction: A cellular hierarchy in melanoma uncouples growth and metastasis},
+   journal = {Nature},
+   volume = {611},
+   number = {7934},
+   pages = {E4},
+   ISSN = {1476-4687 (Electronic)
+0028-0836 (Linking)},
+   DOI = {10.1038/s41586-022-05415-4},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/36261534},
+   year = {2022},
+   type = {Journal Article}
+}
+
 @article{RN99,
 	author = {Karras, P. and Bordeu, I. and Pozniak, J. and Nowosad, A. and Pazzi, C. and Van Raemdonck, N. and Landeloos, E. and Van Herck, Y. and Pedri, D. and Bervoets, G. and Makhzami, S. and Khoo, J. H. and Pavie, B. and Lamote, J. and Marin-Bejar, O. and Dewaele, M. and Liang, H. and Zhang, X. and Hua, Y. and Wouters, J. and Browaeys, R. and Bergers, G. and Saeys, Y. and Bosisio, F. and van den Oord, J. and Lambrechts, D. and Rustgi, A. K. and Bechter, O. and Blanpain, C. and Simons, B. D. and Rambow, F. and Marine, J. C.},
 	title = {A cellular hierarchy in melanoma uncouples growth and metastasis},
@@ -155,18 +186,6 @@
 0028-0836 (Linking)},
    DOI = {10.1038/s41586-021-04074-1},
    url = {https://www.ncbi.nlm.nih.gov/pubmed/34764478},
-   year = {2021},
-   type = {Journal Article}
-}
-
-@article{RN27,
-   author = {Pedri, D. and Karras, P. and Landeloos, E. and Marine, J. C. and Rambow, F.},
-   title = {Epithelial-to-mesenchymal-like transition events in melanoma},
-   journal = {FEBS J},
-   ISSN = {1742-4658 (Electronic)
-1742-464X (Linking)},
-   DOI = {10.1111/febs.16021},
-   url = {https://www.ncbi.nlm.nih.gov/pubmed/33999497},
    year = {2021},
    type = {Journal Article}
 }
