--- a/_bibliography/ds.bib
+++ b/_bibliography/ds.bib
@@ -3992,4 +3992,13 @@ ABSTRACT={<sec>BackgroundBreakthrough infections with severe acute respiratory s
 }
 ~          
 
-~    
+@article{LEETRILLING2022,,
+title = {Identification of herbal teas and their compounds eliciting antiviral activity against SARS-CoV-2 in vitro},
+journal = {BMC Biology},
+volume = {20},
+pages = {},
+year = {2022},
+doi = {https://doi.org/10.1186/s12915-022-01468-z},
+url = {https://www.sciencedirect.com/science/article/pii/S0048969723040810},
+author = {Vu Thuy Khanh Le-Trilling, Denise Mennerich, Corinna Schuler, Roman Sakson, Julia K. Lill, Siva Swapna Kasarla, Dominik Kopczynski, Stefan Loroch, Yulia Flores-Martinez, Benjamin Katschinski, Kerstin Wohlgemuth, Matthias Gunzer, Folker Meyer, Prasad Phapale, Ulf Dittmer, Albert Sickmann, Mirko Trilling},
+}
