Fix broken bibtex entry

--- a/_bibliography/ds.bib
+++ b/_bibliography/ds.bib
@@ -3992,7 +3992,7 @@ ABSTRACT={<sec>BackgroundBreakthrough infections with severe acute respiratory s
 }
 ~          
 
-@article{LEETRILLING2022,,
+@article{LEETRILLING2022,
 title = {Identification of herbal teas and their compounds eliciting antiviral activity against SARS-CoV-2 in vitro},
 journal = {BMC Biology},
 volume = {20},
